--- a/app/views/17-0/reserve-reservations-pro.html
+++ b/app/views/17-0/reserve-reservations-pro.html
@@ -250,26 +250,19 @@
 {% endif %}
 
 <!-- Pagination -->
-{% if _reservationsTotal > 10 and myData.paging == "true" %}
-{% set _currentPage = 1 %}
-{% set _firstPage = "true" %}
-{% set _lastPage = "false" %}
+{% if myData.paging == "true" %}
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <nav role="navigation" aria-label="Pagination">
-        <p class="pagination__summary">Showing 1 &ndash; 50 of {{_reservationsFilteredTotal}} reservations</p>
+        <p class="pagination__summary">Showing 1 &ndash; 50 of 101 reservations</p>
         <ul class="pagination govuk-list">
-          {% if _firstPage != "true" %}
           <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Previous page">Previous</a></li>
-          {% endif %}
-          <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state {% if _currentPage == 1 %}current{% endif %}" href="#0" aria-label="Page 1">1</a></li>
-          <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state {% if _currentPage == 2 %}current{% endif %}" href="#0" aria-label="Page 2">2</a></li>
-          <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state {% if _currentPage == 3 %}current{% endif %}" href="#0" aria-current="true" aria-label="Page 3, current page">3</a></li>
-          <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state {% if _currentPage == 4 %}current{% endif %}" href="#0" aria-label="Page 4">4</a></li>
-          <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state {% if _currentPage == 5 %}current{% endif %}" href="#0" aria-label="Page 5">5</a></li>
-          {% if _lastPage != "true" %}
+          <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Page 1">1</a></li>
+          <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state current" href="#0" aria-current="true" aria-label="Page 2, current page">2</a></li>
+          <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Page 3">3</a></li>
+          <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Page 4">4</a></li>
+          <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Page 5">5</a></li>
           <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Next page">Next</a></li>
-          {% endif %}
         </ul>
       </nav>
   </div>
