--- a/app/views/17-0/_pagination.html
+++ b/app/views/17-0/_pagination.html
@@ -20,7 +20,7 @@
         <p class="govuk-body govuk-body-s" >Replace the word courses with whatever your list is of.</p>
         <!-- Pagination 1 -->
         <nav role="navigation" aria-label="Pagination">
-            <p class="pagination__summary">Showing 1 &ndash; 50 of 400 courses</p>
+            <p class="pagination__summary">Showing 1 to 50 of 400 courses</p>
             <ul class="pagination govuk-list">
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state current" href="#0" aria-current="true" aria-label="Page 1, current page">1</a></li>
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Page 2">2</a></li>
@@ -37,7 +37,7 @@
 
         <!-- Pagination 1 -->
         <nav role="navigation" aria-label="Pagination">
-            <p class="pagination__summary">Showing 1 &ndash; 50 of 100 courses</p>
+            <p class="pagination__summary">Showing 1 to 50 of 100 courses</p>
             <ul class="pagination govuk-list">
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state current" href="#0" aria-current="true" aria-label="Page 1, current page">1</a></li>
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Page 2">2</a></li>
@@ -49,7 +49,7 @@
 
         <!-- Pagination 2 -->
         <nav role="navigation" aria-label="Pagination">
-            <p class="pagination__summary">Showing 51 &ndash; 100 of 100 courses</p>
+            <p class="pagination__summary">Showing 51 to 100 of 100 courses</p>
             <ul class="pagination govuk-list">
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Previous page">Previous</a></li>
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Page 1">1</a></li>
@@ -61,7 +61,7 @@
 
         <!-- Pagination 1 -->
         <nav role="navigation" aria-label="Pagination">
-            <p class="pagination__summary">Showing 1 &ndash; 50 of 400 courses</p>
+            <p class="pagination__summary">Showing 1 to 50 of 400 courses</p>
             <ul class="pagination govuk-list">
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state current" href="#0" aria-current="true" aria-label="Page 1, current page">1</a></li>
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Page 2">2</a></li>
@@ -76,7 +76,7 @@
 
         <!-- Pagination 2 -->
         <nav role="navigation" aria-label="Pagination">
-            <p class="pagination__summary">Showing 51 &ndash; 100 of 400 courses</p>
+            <p class="pagination__summary">Showing 51 to 100 of 400 courses</p>
             <ul class="pagination govuk-list">
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Previous page">Previous</a></li>
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Page 1">1</a></li>
@@ -92,7 +92,7 @@
 
         <!-- Pagination 3 -->
         <nav role="navigation" aria-label="Pagination">
-            <p class="pagination__summary">Showing 101 &ndash; 150 of 400 courses</p>
+            <p class="pagination__summary">Showing 101 to 150 of 400 courses</p>
             <ul class="pagination govuk-list">
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Previous page">Previous</a></li>
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Page 1">1</a></li>
@@ -108,7 +108,7 @@
 
         <!-- Pagination 4 -->
         <nav role="navigation" aria-label="Pagination">
-            <p class="pagination__summary">Showing 151 &ndash; 200 of 400 courses</p>
+            <p class="pagination__summary">Showing 151 to 200 of 400 courses</p>
             <ul class="pagination govuk-list">
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Previous page">Previous</a></li>
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Page 2">2</a></li>
@@ -124,7 +124,7 @@
 
         <!-- Pagination last -->
         <nav role="navigation" aria-label="Pagination">
-            <p class="pagination__summary">Showing 351 &ndash; 400 of 400 courses</p>
+            <p class="pagination__summary">Showing 351 to 400 of 400 courses</p>
             <ul class="pagination govuk-list">
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Previous page">Previous</a></li>
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Page 4">4</a></li>
@@ -153,7 +153,7 @@
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
         <p class="govuk-body" ><span class="govuk-!-font-weight-bold" style="color: red">Incorrect</span></p>
         <nav role="navigation" aria-label="Pagination">
-            <p class="pagination__summary">Showing 1 &ndash; 50 of 50 courses</p>
+            <p class="pagination__summary">Showing 1 to 50 of 50 courses</p>
             <ul class="pagination govuk-list">
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state current" href="#0" aria-current="true" aria-label="Page 1, current page">1</a></li>
             </ul>
@@ -168,7 +168,7 @@
         <h2 class="govuk-heading-m">Set a maximum list of 5 paging links.</h2>
         <p class="govuk-body" ><span class="govuk-!-font-weight-bold" style="color: green">Correct</span></p>
         <nav role="navigation" aria-label="Pagination">
-            <p class="pagination__summary">Showing 1 &ndash; 50 of 400 courses</p>
+            <p class="pagination__summary">Showing 1 to 50 of 400 courses</p>
             <ul class="pagination govuk-list">
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state current" href="#0" aria-current="true" aria-label="Page 1, current page">1</a></li>
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Page 2">2</a></li>
@@ -181,7 +181,7 @@
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
         <p class="govuk-body" ><span class="govuk-!-font-weight-bold" style="color: red">Incorrect</span></p>
         <nav role="navigation" aria-label="Pagination">
-            <p class="pagination__summary">Showing 1 &ndash; 50 of 400 courses</p>
+            <p class="pagination__summary">Showing 1 to 50 of 400 courses</p>
             <ul class="pagination govuk-list">
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state current" href="#0" aria-current="true" aria-label="Page 1, current page">1</a></li>
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Page 2">2</a></li>
@@ -202,7 +202,7 @@
         <h2 class="govuk-heading-m">Previous link should not be visible when on page 1.</h2>
         <p class="govuk-body" ><span class="govuk-!-font-weight-bold" style="color: green">Correct</span></p>
         <nav role="navigation" aria-label="Pagination">
-            <p class="pagination__summary">Showing 1 &ndash; 50 of 400 courses</p>
+            <p class="pagination__summary">Showing 1 to 50 of 400 courses</p>
             <ul class="pagination govuk-list">
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state current" href="#0" aria-current="true" aria-label="Page 1, current page">1</a></li>
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Page 2">2</a></li>
@@ -215,7 +215,7 @@
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
         <p class="govuk-body" ><span class="govuk-!-font-weight-bold" style="color: red">Incorrect</span></p>
         <nav role="navigation" aria-label="Pagination">
-            <p class="pagination__summary">Showing 1 &ndash; 50 of 400 courses</p>
+            <p class="pagination__summary">Showing 1 to 50 of 400 courses</p>
             <ul class="pagination govuk-list">
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Previous page">Previous</a></li>
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state current" href="#0" aria-current="true" aria-label="Page 1, current page">1</a></li>
@@ -236,7 +236,7 @@
         <h2 class="govuk-heading-m">Next link should not be visible when on the last page.</h2>
         <p class="govuk-body" ><span class="govuk-!-font-weight-bold" style="color: green">Correct</span></p>
         <nav role="navigation" aria-label="Pagination">
-            <p class="pagination__summary">Showing 351 &ndash; 400 of 400 courses</p>
+            <p class="pagination__summary">Showing 351 to 400 of 400 courses</p>
             <ul class="pagination govuk-list">
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Previous page">Previous</a></li>
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Page 4">4</a></li>
@@ -249,7 +249,7 @@
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
         <p class="govuk-body" ><span class="govuk-!-font-weight-bold" style="color: red">Incorrect</span></p>
         <nav role="navigation" aria-label="Pagination">
-                <p class="pagination__summary">Showing 351 &ndash; 400 of 400 courses</p>
+                <p class="pagination__summary">Showing 351 to 400 of 400 courses</p>
             <ul class="pagination govuk-list">
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Previous page">Previous</a></li>
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Page 4">4</a></li>
@@ -269,7 +269,7 @@
         <p class="govuk-body" >Notice the total amount of courses in these examples.</p>
         <p class="govuk-body" ><span class="govuk-!-font-weight-bold" style="color: green">Correct</span></p>
         <nav role="navigation" aria-label="Pagination">
-            <p class="pagination__summary">Showing 1 &ndash; 50 of 150 courses</p>
+            <p class="pagination__summary">Showing 1 to 50 of 150 courses</p>
             <ul class="pagination govuk-list">
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state current" href="#0" aria-current="true"  aria-label="Page 1, current page">1</a></li>
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Page 2">2</a></li>
@@ -278,7 +278,7 @@
             </ul>
         </nav><br>
         <nav role="navigation" aria-label="Pagination">
-            <p class="pagination__summary">Showing 1 &ndash; 50 of 400 courses</p>
+            <p class="pagination__summary">Showing 1 to 50 of 400 courses</p>
             <ul class="pagination govuk-list">
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state current" href="#0" aria-current="true"  aria-label="Page 1, current page">1</a></li>
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Page 2">2</a></li>
@@ -291,7 +291,7 @@
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
         <p class="govuk-body" ><span class="govuk-!-font-weight-bold" style="color: red">Incorrect</span></p>
         <nav role="navigation" aria-label="Pagination">
-            <p class="pagination__summary">Showing 1 &ndash; 50 of 150 courses</p>
+            <p class="pagination__summary">Showing 1 to 50 of 150 courses</p>
             <ul class="pagination govuk-list">
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state current" href="#0" aria-current="true"  aria-label="Page 1, current page">1</a></li>
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Page 2">2</a></li>
@@ -299,7 +299,7 @@
             </ul>
         </nav><br>
         <nav role="navigation" aria-label="Pagination">
-            <p class="pagination__summary">Showing 1 &ndash; 50 of 400 courses</p>
+            <p class="pagination__summary">Showing 1 to 50 of 400 courses</p>
             <ul class="pagination govuk-list">
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state current" href="#0" aria-current="true"  aria-label="Page 1, current page">1</a></li>
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Page 2">2</a></li>
@@ -323,7 +323,7 @@
         </ul>
         <p class="govuk-body" ><span class="govuk-!-font-weight-bold" style="color: green">Correct</span></p>
         <nav role="navigation" aria-label="Pagination">
-            <p class="pagination__summary">Showing 251 &ndash; 300 of 400 courses</p>
+            <p class="pagination__summary">Showing 251 to 300 of 400 courses</p>
             <ul class="pagination govuk-list">
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Previous page">Previous</a></li>
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Page 4">4</a></li>
@@ -337,7 +337,7 @@
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
         <p class="govuk-body" ><span class="govuk-!-font-weight-bold" style="color: red">Incorrect</span></p>
         <nav role="navigation" aria-label="Pagination">
-            <p class="pagination__summary">Showing 251 &ndash; 300 of 400 courses</p>
+            <p class="pagination__summary">Showing 251 to 300 of 400 courses</p>
             <ul class="pagination govuk-list">
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Previous page">Previous</a></li>
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Page 5">5</a></li>
