--- a/app/views/17-0/reserve-reservations-pro.html
+++ b/app/views/17-0/reserve-reservations-pro.html
@@ -254,7 +254,7 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <nav role="navigation" aria-label="Pagination">
-        <p class="pagination__summary">Showing 1 &ndash; 50 of 101 reservations</p>
+        <p class="pagination__summary">Showing 1 to 50 of 101 reservations</p>
         <ul class="pagination govuk-list">
           <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Previous page">Previous</a></li>
           <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Page 1">1</a></li>
