--- a/app/assets/sass/components/_pagination.scss
+++ b/app/assets/sass/components/_pagination.scss
@@ -1,13 +1,3 @@
-.pagination .pagination_list-items {
-  li {
-    display: inline-block;
-    a {
-      display: inline-block;
-      padding: 15px 5px 10px 5px;
-      margin-right: 15px;
-    }
-  }
-}
 .pagination {
   padding: 0;
 }
@@ -30,6 +20,9 @@
       background: none;
     }
   }
+}
+.pagination__item:first-child .pagination__link  {
+  padding-left: 0;
 }
 .pagination__summary {
   padding: 8px 0;
