--- a/app/views/17-0/_pagination.html
+++ b/app/views/17-0/_pagination.html
@@ -17,7 +17,7 @@
         </ul>
 
         <h2 class="govuk-heading-l">Example pagination component</h2>
-        <p class="govuk-body govuk-body-s" >Replace the word courses with whatever your list is of.</p>
+        <p class="govuk-body" >Replace the word courses with whatever your list is of.</p>
         <!-- Pagination 1 -->
         <nav role="navigation" aria-label="Pagination">
             <p class="pagination__summary">Showing 1 to 50 of 400 courses</p>
