removed content for transactor

--- a/app/views/17-0/_pagination.html
+++ b/app/views/17-0/_pagination.html
@@ -139,7 +139,7 @@
 
 
 
-
+<div>
         <h2 class="govuk-heading-l">Rules</h2>
 
 
@@ -346,6 +346,8 @@
                 <li class="pagination__item"><a class="pagination__link govuk-link govuk-link--no-visited-state" href="#0" aria-label="Next page">Next</a></li>
             </ul>
         </nav>
+
+    </div>
 
     </div>
 </div>
